kubernetes/infrastructure/traefik/templates/wildcard-grant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: wildcard-grant
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
  to:
    - group: ""
      kind: Secret
