kubernetes/infrastructure/traefik/templates/oauth2-route.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  type: ExternalName
  externalName: auth-proxy.internal.paulfriedrich.me
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: HostRegexp(`^.+\.internal\.paulfriedrich\.me$`) && PathPrefix("/oauth2")
    priority: 10000
    services:
    - kind: Service
      name: oauth2-proxy
      port: 443
      passHostHeader: false
